--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -99,12 +99,6 @@ endif ()
 #  )
 #endif ()
 
-install(TARGETS ${APP_PLUGIN} 
-	ARCHIVE DESTINATION "${LIBDIR}"
-	LIBRARY DESTINATION "${LIBDIR}"
-	RUNTIME DESTINATION "${LIBDIR}"
-	)
-
 # ==============================================================================
 # Specific deployment.
 # ==============================================================================
@@ -148,6 +142,12 @@ if (WIN32)
 	configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../../assets/qt.conf.in" "${CMAKE_CURRENT_BINARY_DIR}/../../qt.conf" @ONLY)	
 	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../../qt.conf" DESTINATION "${CMAKE_INSTALL_BINDIR}")
 	install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/assistant" DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/${EXECUTABLE_NAME}" USE_SOURCE_PERMISSIONS)
+	install(TARGETS ${APP_PLUGIN}
+		ARCHIVE DESTINATION "${LIBDIR}"
+		LIBRARY DESTINATION "${LIBDIR}"
+		RUNTIME DESTINATION "${LIBDIR}"
+		)
+
 	install(CODE "execute_process(COMMAND ${DEPLOYQT_PROGRAM} \"\${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}/${EXECUTABLE_NAME}.exe\" -qmldir=${LINPHONE_QML_DIR} --compiler-runtime)")# -verbose=2)"  COMPONENT binary_application)
 
 #  list(REMOVE_ITEM SHARE_CONTENT "${CMAKE_INSTALL_DATAROOTDIR}/belr" "${CMAKE_INSTALL_DATAROOTDIR}/Belr" "${CMAKE_INSTALL_DATAROOTDIR}/images" "${CMAKE_INSTALL_DATAROOTDIR}/${APPLICATION_NAME}" "${CMAKE_INSTALL_DATAROOTDIR}/${APPLICATION_NAME}" "${CMAKE_INSTALL_DATAROOTDIR}/sounds")
@@ -270,6 +270,11 @@ else()# Not Windows and Apple
 	foreach (DIR ${ICON_DIRS})
 		install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icons/hicolor/${DIR}/apps/icon.png" DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/${DIR}/apps/" RENAME "${EXECUTABLE_NAME}.png")
 	endforeach ()
+	install(TARGETS ${APP_PLUGIN}
+		ARCHIVE DESTINATION "${LIBDIR}"
+		LIBRARY DESTINATION "${LIBDIR}"
+		RUNTIME DESTINATION "${LIBDIR}"
+		)
 endif ()
 
 
@@ -379,7 +384,7 @@ if(${ENABLE_APP_PACKAGING})
 		
 		if(LINPHONE_WINDOWS_SIGNING_DIR)
 			# Sign the installer.
-			set(TIMESTAMP_URL "http://timestamp.verisign.com/scripts/timestamp.dll")
+			set(TIMESTAMP_URL "http://timestamp.globalsign.com/scripts/timstamp.dll")
 			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/linphone.pfx")
 			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/passphrase.txt")
 			get_filename_component(WINSDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH CACHE)
